# CIRC-RL

./: .gitignore  .pre-commit-config.yaml  CIRC-RL_Framework.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
circ_rl/: __init__.py  __main__.py
circ_rl/analytic_policy/: __init__.py  action_normalizer.py  analytic_policy.py  batched_ilqr_solver.py  cem_solver.py  coefficient_calibrator.py  fast_dynamics.py  hypothesis_classifier.py  ilqr_solver.py  lqr_solver.py  mpc_solver.py  mppi_solver.py  phase_planner.py  robust_mpc.py  torch_ilqr_solver.py
circ_rl/causal_discovery/: __init__.py  builder.py  causal_graph.py  ci_tests.py  fci_algorithm.py  ges_algorithm.py  mechanism_validator.py  pc_algorithm.py
circ_rl/constraints/: __init__.py  const_definition.py  const_lagrange.py  const_set.py
circ_rl/diagnostics/: __init__.py  conclusion_test.py  derivation_test.py  diagnostic_suite.py  premise_test.py
circ_rl/environments/: __init__.py  data_collector.py  env_family.py  synthetic_nonlinear.py
circ_rl/evaluation/: __init__.py  const_verifier.py  ensemble.py  mdl_scorer.py
circ_rl/feature_selection/: __init__.py  causal_effect.py  inv_feature_selector.py  transition_analyzer.py
circ_rl/hypothesis/: __init__.py  derived_features.py  dynamics_hypotheses.py  expression.py  falsification_engine.py  hypothesis_register.py  lagrangian_decomposition.py  mdl_symbolic.py  ood_prediction.py  physics_templates.py  reward_hypotheses.py  spurious_detection.py  structural_consistency.py  symbolic_regressor.py  trajectory_prediction.py
circ_rl/invariance/: __init__.py  inv_irm_penalty.py  inv_worst_case.py
circ_rl/observation_analysis/: __init__.py  observation_analyzer.py
circ_rl/orchestration/: __init__.py  pipeline.py  stages.py
circ_rl/policy/: __init__.py  causal_policy.py  causal_q_network.py  composite_policy.py  encoder.py  residual_policy.py
circ_rl/regularization/: __init__.py  reg_composite.py  reg_functional.py  reg_info_bottleneck.py  reg_parametric.py  reg_path.py
circ_rl/training/: __init__.py  circ_trainer.py  residual_rollout.py  residual_trainer.py  rollout.py  trajectory_buffer.py
circ_rl/utils/: __init__.py  checkpointing.py  logging.py  (+2 more)
configs/: config.yaml
docs/: classic_control_benchmark.md  estensione_normalizzazione_dinamica.md  proposed_solutions.md
experiments/: ablation.py  acrobot_v2.py  classic_control_benchmark.py  delta_s2_final.py  delta_s2_iterate.py  delta_s2_trial45.py  diagnose_delta_s2.py  diagnose_delta_s2_pysr.py  diagnose_falsification.py  diagnose_ilqr_reward.py  diagnose_sr_stochasticity.py  diagnose_structural_consistency.py  diagnose_velocity_clip.py  pendulum_compare.py  pendulum_diag.py  pendulum_record.py  pendulum_record_50.py  pendulum_train.py  pendulum_v2.py  pendulum_v2_minimal.py  pendulum_v2_real.py  pendulum_video.py  record_all_checkpoints.sh  test_nonlinear_env.py
scripts/: build_julia_sysimage.jl  build_julia_sysimage.sh
(+68 files in other folders)
