[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circ-rl"
description = "Causal Invariant Regularized Constrained Reinforcement Learning"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Alessandro Flati" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.2.0",
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.3.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    "tensorboard>=2.16.0",
    "einops>=0.8.0",
    "networkx>=3.2",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.hatch.version]
path = "circ_rl/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "RSE",  # flake8-raise
    "RET",  # flake8-return
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # use of assert (needed in tests and shape assertions)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # type annotations not enforced in tests
    "S101",    # assert is fine in tests
    "T20",     # print is fine in tests
]

[tool.ruff.lint.isort]
known-first-party = ["circ_rl"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "gpu: marks tests requiring GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning:gymnasium.*:",
    "ignore::DeprecationWarning:stable_baselines3.*:",
]
